# dpBento-sigmod2025

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  clean.sh  plot.ipynb  pyproject.toml  query.py  requirements.txt  run_dpbento.py  setup.py
benchmarks/GraphDB/: clean.py  prepare.py  report.py  run.py
benchmarks/KVS/: clean.py  prepare.py  report.py  run.py
benchmarks/KVS_BF3/: prepare.py  report.py  run.py
benchmarks/KVS_Farnet/: plot.py  prepare.py  run.py  workload_sample.txt
benchmarks/KVS_Host/: prepare.py  run.py
benchmarks/KVS_Octeon/: clean.py  prepare.py  run.py
benchmarks/RDB/: clean.py  prepare.py  report.py  run.py  test_thread.py
benchmarks/communication/: clean.py  clean.sh  prepare.py  rdma.sh  rdma_bw.sh  report.py  run.py  test.py
benchmarks/compression/: 128.deflate  128.txt  prepare.py  run.py
benchmarks/compressor/: decompress_with_doca.h  decompress_with_simd.c  decompress_with_simd.h  decompress_without_simd.c  decompress_without_simd.h  run.c  run.h  structs.c
benchmarks/compute/: clean.py  prepare.py  report.py  run.py
benchmarks/duckdb/: requirements.txt
benchmarks/e2e/: clean.sh  prepare.py  report.py  run.py  run_experiment.py  setup.sh
benchmarks/graph/: prepare.py  report.py  run.py
benchmarks/hashing/: prepare.py  report.py  run.py
benchmarks/hasing/: clean.py  prepare.py  report.py  run.py
benchmarks/memory/: clean.py  common.c  common.h  mem_bandwidth.c  mem_latency.c  mem_latency.cpp  prepare.py  report.py  run.py  run_sysbench.sh
benchmarks/ml/: clean.py  image_classifier.ipynb  prepare.py  run.py  tf-img-classification.ipynb
benchmarks/rdbms/: run.py
benchmarks/regex/doca_regex_bf2/: meson.build  regex_main.c  regex_test.c  rule.txt
configs_user/: AllTestSetting.json  customize_test.json  example_config.json  example_config_old_dont_use.json  new_config.json  user_bench_config.json
dpbento/: __init__.py  benchmark_base.py  bento_box.py  dpbento.py  runner.py
e2e/: 1.csv  10.csv  10sf.csv  1sf.csv  3.csv  3sf.csv  ge.py  generate.py  plot.py  query.py  script.py
memory/: README.md  mem_latency.cpp
visualization/: compute.ipynb  graph.ipynb  ml.ipynb  plotrandread_latency.py  plotrandread_throughput.py  plotrandwrite_latency.py  plotrandwrite_throughput.py  plotseqread_latency.py  plotseqread_throughput.py  plotseqwrite_latency.py  plotseqwrite_throughput.py
(+103 files in other folders)
